fixed marker overlap and added stat manager

--- a/css/app.css
+++ b/css/app.css
@@ -1,5 +1,8 @@
-﻿body
-{
+﻿html {
+	background-color: #393f4c;
+}
+
+body {
     font-family: 'Segoe UI', sans-serif
 }
 
